--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+body {
+  scrollbar-width: thin;
+  scrollbar-color: 'black';
+}
+body::-webkit-scrollbar-track {
+  background: 'black'
+}
+body::-webkit-scrollbar-thumb {
+  background-color: 'black' ;
+  border-radius: 6px;
+  border: 3px solid 'black';
+}
