--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,18 +13,12 @@ code {
     monospace;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 12px;
+  background-color: #000000;
 }
-body {
-  scrollbar-width: thin;
-  scrollbar-color: 'black';
-}
-body::-webkit-scrollbar-track {
-  background: 'black'
-}
-body::-webkit-scrollbar-thumb {
-  background-color: 'black' ;
-  border-radius: 6px;
-  border: 3px solid 'black';
+
+::-webkit-scrollbar-thumb {
+  background-color: #3b3a3a;
+  border-radius: 20px;
 }
