--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,3 +23,10 @@ code {
   background-color: #3b3a3a;
   border-radius: 20px;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: all 5000s ease-in-out 0s;
+}
